@@ -1206,6 +1206,11 @@
                 </md>.  Solving this linear system by row-reducing the augmented matrix shows that <m>\alpha = 3</m>, <m>\beta = -2</m> is the only solution.</p>
             </solution>
         </exercise>
+        <exercise number="M10" xml:id="exercise-MO-M10">
+            <statement>
+                <p>Describe matrices that are simultaneously both upper triangular <em>and</em> lower triangular.</p>
+            </statement>
+        </exercise>
         <exercisegroup>
             <introduction>
                 <p>In <xref ref="chapter-V" acro="V"/> we defined the operations of vector addition and vector  scalar multiplication in <xref ref="definition-CVA" acro="CVA"/> and <xref ref="definition-CVSM" acro="CVSM"/>.  These two operations formed the underpinnings of the remainder of the chapter.  We have now defined similar operations for matrices in <xref ref="definition-MA" acro="MA"/> and <xref ref="definition-MSM" acro="MSM"/>.  You will have noticed the resulting similarities between <xref ref="theorem-VSPCV" acro="VSPCV"/> and <xref ref="theorem-VSPM" acro="VSPM"/>.</p>
