@@ -38,6 +38,7 @@ to illustrate.  Move Theorem PTMT about the product of
 triangular matrices moves from Section OD to Section MM.
 Move Theorem ITMT about inverses of triangular matrices
 from Section OD to Section MINM, and improve the proof.
+New exercises: MO.T10
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -52,6 +53,7 @@ New: Theorem ESM, formalizing an eigenvalue discussion
 New: Example ULTM, examples of triangular matrices
 New: Theorem NTM, nonsingular triangular matrices
 New: Example NSTM, nonsingular triangular matrices
+New: Exercise MO.T10, both upper and lower triangular
 New: Example UE, unknown eigenvalues
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
